Add div for whole body and add tranform:translate property

--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -7,7 +7,9 @@
     <title>Information</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  <div class="whole">
   <body>
+    
     <div class="title">Information!</div>
     
     <div class="content">
@@ -36,4 +38,5 @@
       <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
   </body>
+  </div>
 </html>
