--- a/flex/07-flex-layout-2/index.html
+++ b/flex/07-flex-layout-2/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">⭐ - link one</a></li>
         <li><a href="#">🦸🏽‍♂️ - link two</a></li>
         <li><a href="#">🖌️ - link three</a></li>
-        <span><li><a href="#">👌🏽 - link four</a></li></span>
+        <li><a href="#">👌🏽 - link four</a></li>
       </ul>
     </div>
     <div class="container">
